terraform/vm/vm.tf
# Create a resource group if it doesn’t exist
resource "azurerm_resource_group" "myterraformgroup" {
    name = "myResourceGroup"
    location = "eastus"
}

# Create virtual network
resource "azurerm_virtual_network" "myterraformnetwork" {
    name = "myVnet"
    address_space = ["10.0.0.0/16"]
    location = "eastus"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
}

# Create subnet
resource "azurerm_subnet" "myterraformsubnet" {
    name = "mySubnet"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    virtual_network_name = "${azurerm_virtual_network.myterraformnetwork.name}"
    address_prefix = "10.0.1.0/24"
}

# Create public IPs
resource "azurerm_public_ip" "myterraformpublicip" {
    name = "myPublicIP"
    location = "eastus"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    public_ip_address_allocation = "dynamic"
}

# Create Network Security Group and rule
resource "azurerm_network_security_group" "myterraformnsg" {
    name = "myNetworkSecurityGroup"
    location = "eastus"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    security_rule {
        name = "SSH"
        priority = 1001
        direction = "Inbound"
        access = "Allow"
        protocol = "Tcp"
        source_port_range = "*"
        destination_port_range = "22"
        source_address_prefix = "*"
        destination_address_prefix = "*"
    }
}

# Create network interface
resource "azurerm_network_interface" "myterraformnic" {
    name = "myNIC"
    location = "eastus"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    network_security_group_id = "${azurerm_network_security_group.myterraformnsg.id}"
    ip_configuration {
        name = "myNicConfiguration"
        subnet_id = "${azurerm_subnet.myterraformsubnet.id}"
        private_ip_address_allocation = "dynamic"
        public_ip_address_id = "${azurerm_public_ip.myterraformpublicip.id}"
    }
}

# Generate random text for a unique storage account name
resource "random_id" "randomId" {
    keepers = {
        # Generate a new ID only when a new resource group is defined
        resource_group = "${azurerm_resource_group.myterraformgroup.name}"
    }
    byte_length = 8
}

# Create storage account for boot diagnostics
resource "azurerm_storage_account" "mystorageaccount" {
    name = "diag${random_id.randomId.hex}"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    location = "eastus"
    account_tier = "Standard"
    account_replication_type = "LRS"
}

# Create virtual machine
resource "azurerm_virtual_machine" "myterraformvm" {
    name = "myVM"
    location = "eastus"
    resource_group_name = "${azurerm_resource_group.myterraformgroup.name}"
    network_interface_ids = ["${azurerm_network_interface.myterraformnic.id}"]
    vm_size = "Standard_DS1_v2"
    storage_os_disk {
        name = "myOsDisk"
        caching = "ReadWrite"
        create_option = "FromImage"
        managed_disk_type = "Premium_LRS"
    }
    storage_image_reference {
        publisher = "Canonical"
        offer = "UbuntuServer"
        sku = "16.04.0-LTS"
        version = "latest"
    }
    os_profile {
        computer_name = "myvm"
        admin_username = "la70532"
    }
    os_profile_linux_config {
        disable_password_authentication = true
        ssh_keys {
            path = "/home/la70532/.ssh/authorized_keys"
            key_data = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC6JmtYL7WDA5iyG3NrUEhNTa5RmhRLUH+0lV/VuuczD3e5/NK+xbwddnhs8J7G+UrqewHdKdZ3/ERiq/3QUEll3FiQwlnM48nyUDw3eOHD73gUI1l3kii+28fnqokXaYVhqzY9x+SmOBi8MOo5wgw3dNYjHVGN4hZXNsmPvlh4IbYvtUphQSnoG0H7iuUviC0bzh1HbXqaJPNhGEZMpVWmvdomYkw9qKXX/o1cUsivpGUFwPYvr8hA5u5lb2sWkxfalvMHc6fSwPqDsY2gAm1bLVhKEQlPyMM5d1XyQvvPF3TgiVSQoBCjYwNAXQ/xJOUC1si5uqWycZCRqeUgE+6r"
        }
    }
    boot_diagnostics {
        enabled = "true"
        storage_uri = "${azurerm_storage_account.mystorageaccount.primary_blob_endpoint}"
    }
}
